src/objects/News_Flash__c.object
<CustomObject>
    <description>This object used to display a single News Flash message across the top of the Dementia Friends website</description>
    <fields>
        <fullName>Date_to_be_published__c</fullName>
        <label>Date to be published</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_Body__c</fullName>
        <label>Main Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>News Flash</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IsActive__c</columns>
        <columns>Date_to_be_published__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>F-{00000}</displayFormat>
        <label>News Flash Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>News Flashes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>